--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: My Website
-description: "Here comes the description of your website"
+title: Étienne Michon's website
+description: ""
 url: "http://etiennem.github.io/"
 baseurl: ""
 timezone: Europe/Paris
