Activate HSTS on the nginx server

--- a/files/webserver.conf
+++ b/files/webserver.conf
@@ -17,6 +17,9 @@ server {
 	ssl_certificate /etc/ssl/localcerts/webserver.crt;
 	ssl_certificate_key /etc/ssl/localcerts/webserver.key;
 
+	# Activate HSTS
+	add_header Strict-Transport-Security "max-age=15768000; includeSubdomains; preload";
+
 	keepalive_timeout 60;
 	# root dir of your pages
 	root /home/webserver/www/;
